Add jar packaging with dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,20 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+      <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-assembly-plugin</artifactId>
+  <configuration>
+    <archive>
+      <manifest>
+        <mainClass>me.berezovskiy.checkbleed.CheckBleed</mainClass>
+      </manifest>
+    </archive>
+<descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+  </configuration>
+</plugin>
     </plugins>
   </build>
   <dependencies>
